<resources>
    <string name="app_name">Newform</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ok">Ok</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="limpar">Limpar</string>
    <string name="buscar">Buscar</string>
    <string name="alunos">Alunos</string>
    <string name="aluno">Aluno</string>
    <string name="nome">Nome</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="sexo">Sexo</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="email">Email</string>
    <string name="observacao">Observação</string>
    <string name="dtNascimento">Data Nascimento</string>
    <string name="cep">Cep</string>
    <string name="cidade_estado_pais">Cidade - Estado - País</string>
    <string name="bairro">Bairro</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="ou">\ ou \</string>
    <string name="modalidades">Modalidades</string>
    <string name="modalidade">Modalidade</string>
    <string name="descricao">Descrição</string>
    <string name="graduacao">Graduação</string>
    <string name="remover_graduacao_mensagem_dialog">Deseja realmente remover a gradução</string>
    <string name="interrogacao">\?\</string>
    <string name="informe_uma_descricao_para_graduacao">Informe uma descrição para a graduação!</string>
    <string name="graduacoes">Graduações</string>
    <string name="informe_uma_descricao_para_modalidade">Informe uma descrição para a modalidade!</string>
    <string name="planos">Planos</string>
    <string name="plano">Plano</string>
    <string name="valor">Valor</string>
    <string name="selecione_uma_modalidade">Selecione uma modalidade!</string>
    <string name="todos_campos_obrigatorios">Para continuar com a operação preencha todos os campos!</string>
    <string name="asterisco">*</string>
    <string name="matriculas">Matriculas</string>
    <string name="dt_cadastro">Dt. Cadastro</string>
    <string name="vencimento">Vencimento</string>
    <string name="nova_modalidade">+ Modalidade</string>
    <string name="dtInicio">Dt. Inicio</string>
    <string name="salvar">Salvar</string>
    <string name="selecione_uma_graduacao">Selecione uma graduação!</string>
    <string name="selecione_um_plano">Selecione um plano!</string>
    <string name="data">Data</string>
    <string name="selecione_um_aluno">Selecione um aluno!</string>
    <string name="dia_vencimento_matricula">Informe um dia para vencimento da matrícula!</string>
    <string name="data_cadastro_obrigatoria">Data de cadastro obrigatória!</string>
    <string name="codigo">Código</string>
    <string name="excluir">Excluir</string>
    <string name="deseja_realmente_excluir">Deseja realmente excluir?</string>
    <string name="deseja_realmente_excluir_modalidade">Deseja realmente excluir a modalidade?</string>
    <string name="cifrao">R$</string>
    <string name="faturas">Faturas</string>
    <string name="matricula">Matricula</string>
    <string name="selecione_uma_matricula">Selecione uma matrícula</string>
    <string name="mes">Mês</string>
    <string name="fatura">Fatura</string>
    <string name="sem_matriculas_registradas">Não existem matrículas registradas!</string>
    <string name="dia">Dia</string>
    <string name="ano">Ano</string>
    <string name="total">Total:</string>
    <string name="informe_uma_data_valida_para_gerar_fatura">Informe uma data válida para gerar a fatura!</string>
    <string name="selecione_uma_matricula_para_gerar_fatura">Selecione uma matrícula para gerar a fatura!</string>
    <string name="sem_alunos_registrados">Sem alunos registrados</string>
    <string name="sem_modalidades_registradas">Sem modalidades registradas</string>
    <string name="sem_planos_registrados">Sem planos registrados</string>
    <string name="sem_faturas_registradas">Sem faturas registradas</string>
    <string name="dia_vencimento_invalido">Dia de vencimento inválido. Somente são permitidos valores entre 1 e 30!</string>
    <string name="matricula_modalidade_obrigatoria">Informe pelo menos uma modalidade para a matrícula!</string>
    <string name="obrigatorio_campo">Obrigatório campo</string>
    <string name="data_nascimento_invalida">Data de nascimento inválida!</string>
    <string name="email_invalido">Email inválido!</string>
    <string name="informe_graduacao_para_modalidade">Informe ao menos uma graduação para modalidade!</string>
    <string name="sem_graduacoes_registradas_para_modalidade">Sem graduações registradas para esta modalidade!</string>
    <string name="sem_planos_registrados_para_modalidade">Sem planos registrados para esta modalidade!</string>
    <string name="informe_usuario_senha_para_logar">Informe usuário e senha para logar!</string>
    <string name="dados_invalidos">Dados inválidos!</string>
    <string name="usuario_nao_habilitado">Usuário não habilitado!</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="cadastrar_underline">Cadastrar-se</string>
    <string name="senhas_nao_conferem">Senhas não conferem!</string>
    <string name="preencha_ambos_campos_de_senha_para_cadastro">Preencha ambos os campos de senha para cadastrar-se!</string>
    <string name="preencha_campo_usuario_para_cadastro">Preencha o campo de usuário para cadastrar-se!</string>
    <string name="conta_criada_com_sucesso">Conta criada com sucesso!</string>
    <string name="ponto_exclamacao">!</string>
    <string name="sair">Sair</string>
    <string name="deseja_sair_do_aplicativo">Deseja realmente sair do aplicativo?</string>
    <string name="logando">Logando...</string>
    <string name="salvando">Salvando...</string>
    <string name="sincronizando">Sincronizando...</string>
</resources>
