<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plano"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/asterisco"
                android:textColor="@color/red500"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/edtPlano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asterisco"
                android:textColor="@color/red500"
                android:layout_marginTop="2dp"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/edtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modalidade"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asterisco"
                android:textColor="@color/red500"
                android:layout_marginTop="2dp"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/edtModalidade"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:focusable="false"
            android:padding="5dp"
            android:hint="@string/selecione_uma_modalidade"
            android:background="@drawable/selector_brown500_transparent_border"
            />

        <Button
            android:id="@+id/btnExcluirPlano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excluir"
            android:background="@drawable/selector_red_transparent_border"
            android:layout_marginTop="30dp"
            android:textColor="@color/red500"
            android:textAllCaps="false"
            android:visibility="gone"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSalvarPlano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_horizontal"
            android:layout_margin="15dp"
            android:src="@drawable/ic_check_white_24dp"
            />

    </LinearLayout>

</RelativeLayout>