<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="@color/deepOrange500">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="30sp"
            />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fitness_center_white_48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

    </LinearLayout>


    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="15dp"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="15dp"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        />

    <Button
        android:id="@+id/btnLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:background="@color/brown500"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        />

</LinearLayout>