<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descricao"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asterisco"
                    android:textColor="@color/red500"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/edtModalidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graduacao"
                android:layout_marginTop="15dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/edtGraduacao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                />

                <ImageView
                    android:id="@+id/imgNovaGraduacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_white_24dp"
                    android:background="@drawable/selector_brown500_oval"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graduacoes"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:padding="15dp"
                android:textStyle="bold"
                android:background="@drawable/shape_background_transparent_border_top"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewGraduacoes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnExcluirModalidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excluir"
            android:background="@drawable/selector_red_transparent_border"
            android:layout_margin="10dp"
            android:textColor="@color/red500"
            android:textAllCaps="false"
            android:visibility="gone"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSalvarModalidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_horizontal"
            android:layout_margin="15dp"
            android:src="@drawable/ic_check_white_24dp"
            />

    </LinearLayout>

</RelativeLayout>