<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearDadosAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigo"
                />

            <EditText
                android:id="@+id/edtIdMatricula"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:enabled="false"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aluno"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asterisco"
                    android:textColor="@color/red500"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/edtAluno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dt_cadastro"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisco"
                        android:textColor="@color/red500"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/edtDtCadastro"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vencimento"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisco"
                        android:textColor="@color/red500"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/edtDiaVencimento"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnNovaMatriculaModalidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_brown500_transparent_border"
            android:text="@string/nova_modalidade"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMatriculaModalidades"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearDadosAluno"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSalvarMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:src="@drawable/ic_check_white_24dp"
        />

</RelativeLayout>